# Afskrivning-af-foraeldede-sagsomkostninger

./: README.md  changelog.md  main.bat  main.py  pyproject.toml  requirements.txt  run.py
afskrivining_af_foraeldede_sagsomkostninger/: __main__.py  config.py  error_screenshot.py  exceptions.py  framework.py  get_constants.py  process.py  reset.py  sap_process.py
afskrivining_af_foraeldede_sagsomkostninger/tests/: test_integration_process.py
src/: config.py  framework.py  get_constants.py  initialize.py  process.py  queue.py  reset.py  sap_process.py
src/tests/: test_sql_integration.py
