[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "afskrivining_af_foraeldede_sagsomkostninger"
version = "1.2.0"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator",
    "Pillow",
    "ITK-dev-shared-components >= 1.3.0",
    "itk_dev_event_log == 1.*"
]
